--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,10 @@
     /*background: url("../images/desktop.jpg");*/
     /*background-size: 100% 100%;*/
 }
+.desktop, .mobile{
+    width: 100%;
+    height: 100vh;
+}
 .call_to_action{
   position: absolute;
   bottom: 100px;
