--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,13 +12,13 @@
 .hero{
   position: relative;
     width: 100%;
-    height: 100vh;
+    /*height: 100vh;*/
     /*background: url("../images/desktop.jpg");*/
     /*background-size: 100% 100%;*/
 }
 .desktop, .mobile{
     width: 100%;
-    /*height: 100%;*/
+    height: 100%;
 }
 .call_to_action{
   position: absolute;
