--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@
 .hero{
   position: relative;
     width: 100%;
-    /*height: 100vh;*/
+    height: 100vh;
     /*background: url("../images/desktop.jpg");*/
     /*background-size: 100% 100%;*/
 }
