--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,13 +13,10 @@
   position: relative;
     width: 100%;
     height: 100vh;
-    /*background: url("../images/desktop.jpg");*/
-    /*background-size: 100% 100%;*/
+    background: url("../images/desktop.jpg");
+    background-size: 100% 100%;
 }
-.desktop, .mobile{
-    width: 100%;
-    height: 100vh;
-}
+
 .call_to_action{
   position: absolute;
   bottom: 100px;
@@ -30,12 +27,15 @@
 }
 
 @media screen and (max-width: 922px){
-    .desktop{
-        display: none !important;
+    .hero{
+        background: url("../images/mobile.jpg.jpg");
     }
-    .mobile{
-        display: block !important;
-    }
+    /*.desktop{*/
+    /*    display: none !important;*/
+    /*}*/
+    /*.mobile{*/
+    /*    display: block !important;*/
+    /*}*/
     .call_to_action {
         position: absolute;
         bottom: 100px;
