--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,7 +28,8 @@
 
 @media screen and (max-width: 922px){
     .hero{
-        background: url("../images/mobile.jpg");
+        background: url("../images/mobile.jpg") !important;
+        background-size: 100% 100%;
     }
     /*.desktop{*/
     /*    display: none !important;*/
