--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,9 +19,9 @@
 
 .call_to_action{
   position: absolute;
-  bottom: 100px;
+  bottom: 50px;
   right: 110px;
-  font-size: 18px;
+  font-size: 28px;
   font-weight: bold;
   padding: 10px;
 }
@@ -30,17 +30,24 @@ i.fas.fa-phone{
 }
 ul.social{
     list-style: none;
-    position: absolute;
-    bottom: 20px;
-    right: 110px;
-    display: flex;
-    justify-content: end;
-    width: 100%;
+    position: fixed;
+    top: 50%;
+    right: 0px;
 }
 ul.social li{
-    display: inline-block;
+    display: block;
     padding: 10px;
-    font-size: 22px;
+    font-size: 18px;
+    border-bottom: 1px solid #fff;
+    background: #121250;
+    cursor: pointer;
+}
+ul.social li:hover,
+ul.social li:active{
+    background: rgb(24 24 107);
+}
+ul.social li:last-child {
+    border-bottom: none;
 }
 ul.social li a i{
     color: white;
@@ -54,23 +61,15 @@ ul.social li a i{
     }
     .call_to_action {
         position: absolute;
-        bottom: 150px;
-        right: 5px;
-        font-size: 14px;
+        bottom: 130px;
+        right: 35%;
+        font-size: 24px;
         font-weight: bold;
-        padding: 0px;
-        left: 5px;
-    }
-    ul.social{
-        bottom: 80px !important;
-        display: flex;
-        justify-content: center;
-        width: 100%;
-        right: unset;
+        padding: 10px;
     }
 }
 @media screen and (min-width:1600px){
     .call_to_action {
-        right: 150px;
+        right: 100px;
     }
 }
