--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,6 +65,8 @@ ul.social li a i{
         font-size: 18px;
         font-weight: bold;
         padding: 10px;
+        right: 30%;
+        left: 30%;
     }
 }
 @media screen and (min-width:1600px){
