--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,8 +13,8 @@
   position: relative;
     width: 100%;
     height: 100vh;
-    /*background: url("../images/desktop.jpg");*/
-    /*background-size: 100% 100%;*/
+    background: url("../images/desktop.jpg");
+    background-size: 100% 100%;
 }
 
 .call_to_action{
@@ -25,6 +25,29 @@
   font-weight: bold;
   padding: 10px;
 }
+.calling{
+    position: absolute;
+    bottom: 50px;
+    font-size: 24px;
+    font-weight: bold;
+    padding: 10px;
+    color: white;
+    line-height: 1;
+    text-align: right;
+}
+.calling i{
+    font-size: 50px;
+    position: relative;
+    top: 25px;
+}
+.calling:hover,
+.calling:active,
+.calling:hover i,
+.calling:active i,
+.calling span i{
+    color: white !important;
+}
+
 i.fas.fa-phone{
     color: black;
 }
@@ -53,12 +76,16 @@ ul.social li a i{
     color: white;
 }
 @media screen and (max-width: 922px){
-    .desktop{
-        display: none !important;
+    .hero{
+        background: url("../images/mobile.jpg");
+        background-size: 100% 100%;
     }
-    .mobile{
-        display: block !important;
-    }
+    /*.desktop{*/
+    /*    display: none !important;*/
+    /*}*/
+    /*.mobile{*/
+    /*    display: block !important;*/
+    /*}*/
     .call_to_action {
         position: absolute;
         bottom: 50%;
@@ -68,6 +95,11 @@ ul.social li a i{
         right: 30%;
         left: 30%;
     }
+    .calling{
+        right: 25%;
+    }
+
+;
 }
 @media screen and (min-width:1600px){
     .call_to_action {
