--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,6 +100,9 @@ ul.social li a i{
         font-size: 18px;
         bottom: 40%;
     }
+    .calling i{
+        font-size: 40px;
+    }
 
 ;
 }
