--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,7 +98,7 @@ ul.social li a i{
     .calling{
         right: 28%;
         font-size: 18px;
-        bottom: 40%;
+        bottom: 0;
     }
     .calling i{
         font-size: 40px;
