--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,8 +13,9 @@
   position: relative;
     width: 100%;
     height: 100vh;
-    background: url("../images/desktop.jpg");
+    background: url("../images/desktop.png");
     background-size: 100% 100%;
+    cursor: pointer;
 }
 
 .call_to_action{
@@ -84,7 +85,7 @@ ul.social li a i{
 }
 @media screen and (max-width: 922px){
     .hero{
-        background: url("../images/mobile.jpg");
+        background: url("../images/mobile.png");
         background-size: 100% 100%;
     }
     /*.desktop{*/
