--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,8 +85,8 @@ ul.social li a i{
 }
 @media screen and (max-width: 922px){
     .hero{
-        background: url("../images/mobile.png");
-        background-size: 100% 100%;
+        background: url("../images/mobile.png") center center no-repeat;
+        /*background-size: 100% 100%;*/
     }
     /*.desktop{*/
     /*    display: none !important;*/
